Add some code for responsive

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <div id="nav-left">
                     <span class="nav-text"><b class="font-bold">&lt;/&gt;</b> CodeWithHarry<!-- --></span>
                 </div>
+                <div class="respo">
+                    <div class="center">Menu</div>
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" style="margin-top: 0.25rem; color:9333EA;" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"></path></svg>
+                </div>
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" class="respo-svg" height="28" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path><path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path></svg>
+                <button class="respo-btn">Login</button>
                 <div id="nav-right">
                     <ul class="nav-list">
                         <li><a href="/">Home</a></li>
@@ -30,7 +36,7 @@
                         <li><i class="ri-moon-fill"></i></li>
                     </ul>
                     <div class="nav-btns">
-                        <button class="btn n-btn">Login</button>
+                        <button class="btn n-btn res-n-btn">Login</button>
                         <button class="btn n-btn">Signup</button>
                     </div>
 
@@ -69,12 +75,12 @@
         <div id="hero">
             <div class="bio-cont">
                 <div>
-                    <h2>Welcome to <span class="text-col">CodeWithHarry</span></h2>
-                    <h4>Learn <span class="text-col">Web Development</span></h4>
-                    <p class="para-text">Confused on which course to take? I have got you covered. Browse courses and
+                    <h2 class="res-center">Welcome to <span class="text-col">CodeWithHarry</span></h2>
+                    <h4 class="res-center">Learn <span class="text-col">Web Development</span></h4>
+                    <p class="para-text res-center">Confused on which course to take? I have got you covered. Browse courses and
                         find out the best course for you. Its free! Code With Harry is my attempt to teach basics and
                         those coding techniques to people in short time which took me ages to learn.</p>
-                    <div id="btons">
+                    <div class="res-center" id="btons">
                         <button class="btn">Free Courses</button>
                         <button class="btn">Explore Blog</button>
                     </div>
