--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="/">Contact</a></li>
                         <li><a href="/">My Gear</a></li>
                         <li><a href="/">Work With Us</a></li>
-                        <li><i class="ri-moon-fill"></i></li>
+                        <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" style="color: #fff;" height="20" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path><path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path></svg></i></li>
                     </ul>
                     <div class="nav-btns">
                         <button class="btn n-btn res-n-btn">Login</button>
@@ -76,7 +76,7 @@
             <div class="bio-cont">
                 <div>
                     <h2 class="res-center">Welcome to <span class="text-col">CodeWithHarry</span></h2>
-                    <h4 class="res-center">Learn <span class="text-col">Web Development</span></h4>
+                    <h4 class="res-center">Learn <span class="text-col text-type">Web Development</span></h4>
                     <p class="para-text res-center">Confused on which course to take? I have got you covered. Browse courses and
                         find out the best course for you. Its free! Code With Harry is my attempt to teach basics and
                         those coding techniques to people in short time which took me ages to learn.</p>
@@ -197,6 +197,16 @@
             </div>
         </footer>
     </div>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+         const typed = new Typed('.text-type', {
+            strings: ['Web Development', 'C Programing', 'Python',"C++","JAVA", "DSA", "Machine Learning", "Data Science"],
+            typeSpeed: 50,
+            backSpeed: 50,
+            loop: true,
+        });
+    </script>
 
 </body>
 
