--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
                 </div>
                 <div class="respo">
                     <div class="center">Menu</div>
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" style="margin-top: 0.25rem; color:9333EA;" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"></path></svg>
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024"
+                        style="margin-top: 0.25rem; color:9333EA;" height="1em" width="1em"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z">
+                        </path>
+                    </svg>
                 </div>
-                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" class="respo-svg" height="28" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path><path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path></svg>
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" class="respo-svg"
+                    height="28" width="28" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z">
+                    </path>
+                    <path
+                        d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z">
+                    </path>
+                </svg>
                 <button class="respo-btn">Login</button>
                 <div id="nav-right">
                     <ul class="nav-list">
@@ -33,7 +47,15 @@
                         <li><a href="/">Contact</a></li>
                         <li><a href="/">My Gear</a></li>
                         <li><a href="/">Work With Us</a></li>
-                        <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" style="color: #fff;" height="20" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path><path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path></svg></i></li>
+                        <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16"
+                                style="color: #fff;" height="20" width="20" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z">
+                                </path>
+                                <path
+                                    d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z">
+                                </path>
+                            </svg></i></li>
                     </ul>
                     <div class="nav-btns">
                         <button class="btn n-btn res-n-btn">Login</button>
@@ -77,7 +99,8 @@
                 <div>
                     <h2 class="res-center">Welcome to <span class="text-col">CodeWithHarry</span></h2>
                     <h4 class="res-center">Learn <span class="text-col text-type">Web Development</span></h4>
-                    <p class="para-text res-center">Confused on which course to take? I have got you covered. Browse courses and
+                    <p class="para-text res-center">Confused on which course to take? I have got you covered. Browse
+                        courses and
                         find out the best course for you. Its free! Code With Harry is my attempt to teach basics and
                         those coding techniques to people in short time which took me ages to learn.</p>
                     <div class="res-center" id="btons">
@@ -96,37 +119,46 @@
             <div id="courses">
                 <div class="box">
                     <img src="./image/7wnove7K-ZQ-HD.jpg" alt="">
-                    <p class="para-text">FREE COURSE</p>
-                    <h5 class="text-h5">Python Tutorials - 100 Days of Code</h5>
-                    <p class="para-text">Python is one of the most demanded programming languages in the job market.
-                        Surprisingly, it is equally easy to learn and master Python. Let's commit our 100 days of code
-                        to python!</p>
-                    <div class="bon">
-                        <button class="btn n-btn">Start Watching</button>
+                    <div class="course-contents">
+                        <p class="para-text">FREE COURSE</p>
+                        <h5 class="text-h5">Python Tutorials - 100 Days of Code</h5>
+                        <p class="para-text">Python is one of the most demanded programming languages in the job market.
+                            Surprisingly, it is equally easy to learn and master Python. Let's commit our 100 days of
+                            code
+                            to python!</p>
+                        <div class="bon">
+                            <button class="btn n-btn">Start Watching</button>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="./image/JS-Thumb (1).jpg" alt="">
-                    <p class="para-text">FREE COURSE</p>
-                    <h5 class="text-h5">Ultimate JavaScript Course</h5>
-                    <p class="para-text">This latest JavaScript course comes with premium curriculum that covers
-                        everything from basics to advance. On top of that, you will get my handwritten notes of JS for
-                        completely free. What are you waiting for? Just Enroll Buddy
-                    </p>
-                    <div class="bon">
-                        <button class="btn n-btn">Start Watching</button>
+                    <div class="course-contents">
+                        <p class="para-text">FREE COURSE</p>
+                        <h5 class="text-h5">Ultimate JavaScript Course</h5>
+                        <p class="para-text">This latest JavaScript course comes with premium curriculum that covers
+                            everything from basics to advance. On top of that, you will get my handwritten notes of JS
+                            for
+                            completely free. What are you waiting for? Just Enroll Buddy
+                        </p>
+                        <div class="bon">
+                            <button class="btn n-btn">Start Watching</button>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="https://codewithharry.nyc3.cdn.digitaloceanspaces.com/assets/090fefe24d23d47584f6ddc7eb5a241e.png
                     " alt="">
-                    <p class="para-text">FREE COURSE</p>
-                    <h5 class="text-h5">React JS Tutorials For Beginners</h5>
-                    <p class="para-text">Python is one of the most demanded programming languages in the job market.
-                        Surprisingly, it is equally easy to learn and master Python. Let's commit our 100 days of code
-                        to python!</p>
-                    <div class="bon">
-                        <button class="btn n-btn">Start Watching</button>
+                    <div class="course-contents">
+                        <p class="para-text">FREE COURSE</p>
+                        <h5 class="text-h5">React JS Tutorials For Beginners</h5>
+                        <p class="para-text">Python is one of the most demanded programming languages in the job market.
+                            Surprisingly, it is equally easy to learn and master Python. Let's commit our 100 days of
+                            code
+                            to python!</p>
+                        <div class="bon">
+                            <button class="btn n-btn">Start Watching</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -180,19 +212,43 @@
         <footer style="background-color: #1F2937; color: #fff;">
             <div class="f-container">
                 <div class="f-logo">
-                    <img width="48" height="48" src="https://www.codewithharry.com/img/logo-blue.png" alt="codewithhary">
+                    <img width="48" height="48" src="https://www.codewithharry.com/img/logo-blue.png"
+                        alt="codewithhary">
                     <div class="f-logo-text">CodeWithHarry</div>
                 </div>
                 <p class="f-logo-p">Copyright &copy; 2023 CodeWithHarry.com</p>
-                
+
                 <div class="f-social">
-                    <a href="https://www.facebook.com/codewithharry" aria-label="facebook" target="_blank" rel="noreferrer" style="color:#d5dbe6;"><svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path></svg></a>
+                    <a href="https://www.facebook.com/codewithharry" aria-label="facebook" target="_blank"
+                        rel="noreferrer" style="color:#d5dbe6;"><svg fill="currentColor" stroke-linecap="round"
+                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
+                            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                        </svg></a>
 
-                    <a href="https://www.twitter.com/codewithharry" aria-label="twitter" target="_blank" rel="noreferrer" style="margin-left: 0.75rem; color:#d5dbe6;"><svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path></svg></a>
+                    <a href="https://www.twitter.com/codewithharry" aria-label="twitter" target="_blank"
+                        rel="noreferrer" style="margin-left: 0.75rem; color:#d5dbe6;"><svg fill="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
+                            <path
+                                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                            </path>
+                        </svg></a>
 
-                    <a href="https://www.instagram.com/codewithharry" aria-label="instagram" target="_blank" rel="noreferrer" style="margin-left: 0.75rem; color:#d5dbe6;"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
+                    <a href="https://www.instagram.com/codewithharry" aria-label="instagram" target="_blank"
+                        rel="noreferrer" style="margin-left: 0.75rem; color:#d5dbe6;"><svg fill="none"
+                            stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            viewBox="0 0 24 24">
+                            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                        </svg></a>
 
-                    <a href="https://www.github.com/codewithharry" aria-label="github" target="_blank" rel="noreferrer" style="margin-left: 0.75rem; color:#d5dbe6;"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" style="font-size: 1.25rem;" xmlns="http://www.w3.org/2000/svg"><path d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0 1 38.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"></path></svg></a>
+                    <a href="https://www.github.com/codewithharry" aria-label="github" target="_blank" rel="noreferrer"
+                        style="margin-left: 0.75rem; color:#d5dbe6;"><svg stroke="currentColor" fill="currentColor"
+                            stroke-width="0" viewBox="0 0 1024 1024" style="font-size: 1.25rem;"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0 1 38.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z">
+                            </path>
+                        </svg></a>
                 </div>
             </div>
         </footer>
@@ -200,8 +256,8 @@
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
-         const typed = new Typed('.text-type', {
-            strings: ['Web Development', 'C Programing', 'Python',"C++","JAVA", "DSA", "Machine Learning", "Data Science"],
+        const typed = new Typed('.text-type', {
+            strings: ['Web Development', 'C Programing', 'Python', "C++", "JAVA", "DSA", "Machine Learning", "Data Science"],
             typeSpeed: 50,
             backSpeed: 50,
             loop: true,
